@@ -7,6 +7,9 @@ Notes:
   - http://msdn.microsoft.com/en-us/library/windows/desktop/ms679351(v=vs.85).aspx
   - http://blogs.msdn.com/b/oldnewthing/archive/2007/11/28/6564257.aspx
 
+20150904
+* updated common
+
 20150407
 * worked on tests
 * removed USE_CRT_FUNCTIONS support
